# uniformize

./: Makefile  README.md  dune-project  uniformize.opam
src/lib/: EMA.ml  EMA.mli  Uniformize.ml  Uniformize.mli  dune
src/test/: dune  test.ml
